# qec

./: .gitignore  3d_ldpc_hx.npz  3d_ldpc_hz.npz  3d_ldpc_lx.npz  3d_ldpc_lz.npz  3d_ldpc_mx.npz  CONTRIBUTING.md  HGP10_hx.npz  HGP10_lz.npz  HQ_1020_136_20_hx.npz  HQ_1020_136_20_hz.npz  HQ_1020_136_20_lx.npz  HQ_1020_136_20_lz.npz  HQ_1428_184_24_hx.npz  HQ_1428_184_24_hz.npz  HQ_544_80_12_hx.npz  HQ_714_100_16_hx.npz  HQ_714_100_16_hz.npz  HQ_714_100_16_lx.npz  LICENSE  README.md  example_for_tom.py  matrix_load_example.py  output.json  pyproject.toml  scratch.py  test.npz
demo/: demo.ipynb
rotated_surface_code_npz/: rotated_surface_code_1089_1_33_hx.npz  rotated_surface_code_1089_1_33_hz.npz  rotated_surface_code_1089_1_33_lx.npz  rotated_surface_code_1089_1_33_lz.npz  rotated_surface_code_121_1_11_hx.npz  rotated_surface_code_121_1_11_hz.npz  rotated_surface_code_121_1_11_lx.npz  rotated_surface_code_121_1_11_lz.npz  rotated_surface_code_1225_1_35_hx.npz  rotated_surface_code_1225_1_35_hz.npz  rotated_surface_code_1225_1_35_lx.npz  rotated_surface_code_1225_1_35_lz.npz  rotated_surface_code_1369_1_37_hx.npz  rotated_surface_code_1369_1_37_hz.npz  rotated_surface_code_1369_1_37_lx.npz  rotated_surface_code_1369_1_37_lz.npz  rotated_surface_code_1521_1_39_hx.npz  rotated_surface_code_1521_1_39_hz.npz  rotated_surface_code_1521_1_39_lx.npz  rotated_surface_code_1521_1_39_lz.npz  rotated_surface_code_169_1_13_hx.npz  rotated_surface_code_169_1_13_hz.npz  rotated_surface_code_169_1_13_lx.npz  rotated_surface_code_169_1_13_lz.npz  rotated_surface_code_225_1_15_hx.npz  rotated_surface_code_225_1_15_hz.npz  rotated_surface_code_225_1_15_lx.npz  rotated_surface_code_225_1_15_lz.npz  rotated_surface_code_25_1_5_hx.npz  rotated_surface_code_25_1_5_hz.npz  rotated_surface_code_25_1_5_lx.npz  rotated_surface_code_25_1_5_lz.npz  rotated_surface_code_289_1_17_hx.npz  rotated_surface_code_289_1_17_hz.npz  rotated_surface_code_289_1_17_lx.npz  rotated_surface_code_289_1_17_lz.npz  rotated_surface_code_361_1_19_hx.npz  (+39 more)
scratch/: scratch.py  test_z.npz
(+147 files in other folders)
