[project]
name = "qec"
version = "0.2.1"

description = "Python Tools for Quantum Error Correction"
readme = "README.md"
authors = [
    { name = "Joschka Roffe", email = "joschka@roffe.eu" }
]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = [
    "ldpc",
    "numpy>=1.24.0",
    "scipy>=1.9.3",
    "requests",
    "beautifulsoup4"
]

[tool.setuptools.packages.find]
where = ["src"]  
include = ["qec","qec.*"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"


